# elege

./: .env  main.py  pyproject.toml  tse_backup.sql
.github/workflows/: ci.yml
config/: settings.py
elections/: models.py
elections/migrations/: 0001_initial.py  0002_election_tse_election_id.py
entities/: models.py
entities/management/commands/: import_camara.py  import_tse.py
entities/migrations/: 0001_initial.py  0002_candidacy_tse_id_alter_politicalperson_cpf.py  0003_proposal_promise.py
entities/services/: camara_api.py  tse_api.py
entities/tests/: test_camara_client.py  test_camara_integration.py  test_import_camara.py  test_import_tse.py  test_models.py  test_tse_client.py  test_tse_integration.py
entities/tests/cassettes/: candidate_detail_2022.yaml  candidates_df_depfed_2022.yaml  deputies_df.yaml  election_id_2022.yaml  elections.yaml  positions_df_2022.yaml  votes_for_session.yaml
legislature/: apps.py  models.py
legislature/migrations/: 0001_initial.py
legislature/services/: camara_api.py
legislature/tests/: test_camara_client.py  test_camara_integration.py
legislature/tests/cassettes/: voting_sessions.yaml
tests/: dummy_backends.py
